fix a few issues from the move to NIO